--- a/index.html
+++ b/index.html
@@ -83,30 +83,10 @@
 </footer>
 
 <script>
-   function toggleMenu() {
-    document.getElementById('main-menu').classList.toggle('active');
-}
+    function toggleMenu() {
+        document.getElementById('main-menu').classList.toggle('active');
+    }
 
-document.querySelectorAll('#main-menu > li > a').forEach(link => {
-    link.addEventListener('click', event => {
-        const submenu = link.nextElementSibling;
-        
-        // Fechar outros submenus abertos
-        document.querySelectorAll('#main-menu .submenu.open').forEach(openSubmenu => {
-            if (openSubmenu !== submenu) {
-                openSubmenu.classList.remove('open');
-            }
-        });
-
-        // Toggle apenas no submenu clicado
-        if (submenu && submenu.classList.contains('submenu')) {
-            event.preventDefault();
-            submenu.classList.toggle('open');
-        }
-    });
-});
-
-    // Scroll behavior for back-to-top button
     const backToTopButton = document.getElementById('back-to-top');
 
     window.onscroll = function () {
@@ -140,18 +120,45 @@ document.querySelectorAll('#main-menu > li > a').forEach(link => {
         background-color: #e69500;
     }
 
-    nav ul.active {
+    nav ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
     }
 
-    nav ul li ul.submenu.open {
-        display: block;
+    nav ul li {
+        position: relative;
+        padding: 10px;
+    }
+
+    nav ul li a {
+        color: white;
+        text-decoration: none;
+        padding: 10px 15px;
     }
 
     nav ul li ul.submenu {
         display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        background-color: #333;
+        padding: 0;
+        border-radius: 5px;
+        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+    }
+
+    nav ul li:hover > ul.submenu {
+        display: block;
+    }
+
+    nav ul li ul.submenu li {
+        padding: 10px;
+    }
+
+    nav ul li ul.submenu li a:hover {
+        background-color: #FFA500;
     }
 </style>
 
