--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <ul id="main-menu">
             <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
             <li>
-                <a href="operations.html"><i class="fas fa-plane"></i> Operations</a>
+                <a href="operations.html"><i class="fas fa-helicopter"></i> Operations</a>
                 <ul class="submenu">
                     <li><a href="operations.html#flight-manual">Flight Manual</a></li>
                     <li><a href="operations.html#system-description">System Description</a></li>
