--- a/maintenance.html
+++ b/maintenance.html
@@ -37,7 +37,7 @@
         <ul>
             <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
             <li>
-                <a href="operations.html"><i class="fas fa-cogs"></i> Operations</a>
+                <a href="operations.html"><i class="fas fa-helicopter"></i> Operations</a>
                 <ul class="submenu">
                     <li><a href="operations.html#flight-manual">Flight Manual</a></li>
                     <li><a href="operations.html#system-description">System Description</a></li>
