--- a/operations.html
+++ b/operations.html
@@ -32,7 +32,7 @@
         <ul>
             <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
             <li>
-                <a href="operations.html"><i class="fas fa-cogs"></i> Operations</a>
+                <a href="operations.html"><i class="fas fa-helicopter"></i> Operations</a>
                 <ul class="submenu">
                     <li><a href="#flight-manual">Flight Manual</a></li>
                     <li><a href="#system-description">System Description</a></li>
