--- a/maintenance.html
+++ b/maintenance.html
@@ -30,7 +30,7 @@
 <body>
 
 <header>
-    <img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
+    <img src="images/Anavia-English-Colour.jpg" alt="ANAVIA Logo" class="logo">
     <h1>Maintenance</h1>
     <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
     <nav>
