--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 
 <header>
-    <img src="images/Anavia-English-Colour.jpg" alt="ANAVIA Logo" class="logo">
+    <img src="images/Anavia-English-Colour.png" alt="ANAVIA Logo" class="logo">
     <h1>Operations Department</h1>
     <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
     <nav>
