--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Operations Department - ANAVIA</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/6.1.6/index.global.min.js"></script> <!-- Importa o FullCalendar -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/6.1.6/index.global.min.js"></script>
 </head>
 <body>
 
@@ -26,18 +27,15 @@
 </header>
 
 <div class="container">
-    <!-- Calendário -->
     <section id="calendar-section">
         <h2>Scheduled Operations</h2>
         <div id="calendar"></div>
     </section>
 
-    <!-- Seção Book a Flight -->
     <section id="book-flight">
         <h2>Book a Flight</h2>
         <button onclick="openForm()">✈️ Book Now</button>
 
-        <!-- Formulário em Modal -->
         <div id="bookingForm" class="modal">
             <div class="modal-content">
                 <span class="close" onclick="closeForm()">&times;</span>
@@ -65,7 +63,7 @@
 </footer>
 
 <script>
-    // Inicializar o FullCalendar
+    // Inicializa o FullCalendar
     document.addEventListener('DOMContentLoaded', function () {
         var calendarEl = document.getElementById('calendar');
         var calendar = new FullCalendar.Calendar(calendarEl, {
@@ -79,7 +77,12 @@
         calendar.render();
     });
 
-    // Abrir e fechar o formulário modal
+    // Função do menu mobile
+    function toggleMenu() {
+        document.querySelector('nav ul').classList.toggle('active');
+    }
+
+    // Formulário modal
     function openForm() {
         document.getElementById('bookingForm').style.display = 'block';
     }
@@ -88,103 +91,6 @@
         document.getElementById('bookingForm').style.display = 'none';
     }
 </script>
-
-<style>
-    body {
-        font-family: 'Montserrat', sans-serif;
-        margin: 0;
-        padding: 0;
-    }
-
-    #calendar-section {
-        margin: 20px 0;
-    }
-
-    #calendar {
-        max-width: 900px;
-        margin: 0 auto;
-    }
-
-    #book-flight {
-        text-align: center;
-        margin-top: 30px;
-    }
-
-    #book-flight button {
-        background-color: #FFA500;
-        color: white;
-        border: none;
-        padding: 10px 20px;
-        font-size: 18px;
-        border-radius: 5px;
-        cursor: pointer;
-    }
-
-    #book-flight button:hover {
-        background-color: #e69500;
-    }
-
-    /* Estilo do modal */
-    .modal {
-        display: none;
-        position: fixed;
-        z-index: 1000;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        overflow: auto;
-        background-color: rgba(0, 0, 0, 0.6);
-    }
-
-    .modal-content {
-        background-color: #fefefe;
-        margin: 10% auto;
-        padding: 20px;
-        border: 1px solid #888;
-        width: 40%;
-        border-radius: 8px;
-    }
-
-    .modal-content h3 {
-        text-align: center;
-    }
-
-    .modal-content input, .modal-content textarea {
-        width: 100%;
-        padding: 10px;
-        margin: 8px 0;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-    }
-
-    .modal-content button {
-        background-color: #4CAF50;
-        color: white;
-        padding: 10px 15px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-    }
-
-    .modal-content button:hover {
-        background-color: #45a049;
-    }
-
-    .close {
-        color: #aaa;
-        float: right;
-        font-size: 28px;
-        font-weight: bold;
-    }
-
-    .close:hover,
-    .close:focus {
-        color: black;
-        text-decoration: none;
-        cursor: pointer;
-    }
-</style>
 
 </body>
 </html>
