--- a/index.html
+++ b/index.html
@@ -3,116 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Operations, Training, Safety, and Maintenance for ANAVIA's UAV operations.">
-    <meta name="keywords" content="UAV, ANAVIA, Operations, Training, Safety, Maintenance, Drones">
     <title>Operations Department</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        .section {
-            background-color: #f2f2f2;
-            padding: 20px;
-            margin-bottom: 20px;
-            border-left: 5px solid #FFA500;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        .section h2 {
-            color: #FFA500;
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/5.11.3/main.min.css">
 </head>
 <body>
 
 <header>
     <img src="images/logo-anavia-long.png" alt="ANAVIA Logo" class="logo">
     <h1>Operations Department</h1>
-    <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
+    <div class="menu-toggle" id="mobile-menu" onclick="toggleMenu()">&#9776;</div>
     <nav>
         <ul id="main-menu">
             <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-            <li>
-                <a href="operations.html"><i class="fas fa-helicopter"></i> Operations</a>
-                <ul class="submenu">
-                    <li><a href="operations.html#flight-manual">Flight Manual</a></li>
-                    <li><a href="operations.html#system-description">System Description</a></li>
-                    <li><a href="operations.html#flight-log">Flight Log</a></li>
-                    <li><a href="operations.html#test-validations">Test & Validations</a></li>
-                    <li><a href="operations.html#flight-tools">Flight Tools</a></li>
-                    <li><a href="operations.html#documents">Documents</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="training.html"><i class="fas fa-book-open"></i> Training</a>
-                <ul class="submenu">
-                    <li><a href="training.html#training-manual">Training Manual</a></li>
-                    <li><a href="training.html#training-programs">Training Programs</a></li>
-                    <li><a href="training.html#reports-assessments">Reports and Assessments</a></li>
-                    <li><a href="training.html#courses-documents">Courses Documents</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="safety.html"><i class="fas fa-shield-alt"></i> Safety</a>
-                <ul class="submenu">
-                    <li><a href="safety.html#safety-management-manual">Safety Management Manual</a></li>
-                    <li><a href="safety.html#compliance-manual">Compliance Manual</a></li>
-                    <li><a href="safety.html#ftl-policy">FTL Policy</a></li>
-                    <li><a href="safety.html#safety-documents">Safety Documents</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="maintenance.html"><i class="fas fa-wrench"></i> Maintenance</a>
-                <ul class="submenu">
-                    <li><a href="maintenance.html#maintenance-manual">Maintenance Manual</a></li>
-                    <li><a href="maintenance.html#maintenance-logs">Maintenance Logs</a></li>
-                    <li><a href="maintenance.html#configuration-report">Configuration Report</a></li>
-                    <li><a href="maintenance.html#fleet-management">Fleet Management</a></li>
-                </ul>
-            </li>
+            <li><a href="operations.html"><i class="fas fa-helicopter"></i> Operations</a></li>
+            <li><a href="training.html"><i class="fas fa-book-open"></i> Training</a></li>
+            <li><a href="safety.html"><i class="fas fa-shield-alt"></i> Safety</a></li>
+            <li><a href="maintenance.html"><i class="fas fa-wrench"></i> Maintenance</a></li>
         </ul>
     </nav>
 </header>
 
 <div class="container">
-    <section class="section" id="info">
-        <h2>What the Operations Department Does</h2>
-        <p>Our department ensures the safe, efficient, and compliant operation of aircraft, focusing on training, safety, and maintenance to support mission success.</p>
+    <!-- Seção do Calendário -->
+    <section class="calendar-section">
+        <h2>Department Schedule</h2>
+        <div id="calendar"></div>
     </section>
 
-    <section class="section" id="links">
-        <h2>Documentation and Quick Access</h2>
-        <ul>
-            <li><a href="https://drive.google.com/YOUR_LINK" target="_blank">Manuals and Procedures</a></li>
-            <li><a href="https://drive.google.com/YOUR_LINK" target="_blank">Previous Flight Reports</a></li>
-        </ul>
+    <!-- Seção de Reserva -->
+    <section class="book-flight-section">
+        <h2>Book a Flight</h2>
+        <p>Plan your mission with ease by booking a flight for operations.</p>
+        <button id="book-flight-button">Book Now</button>
     </section>
 </div>
-
-<button id="back-to-top" onclick="scrollToTop()">⬆️</button>
 
 <footer>
     <p>&copy; 2025 Operations Department - ANAVIA</p>
 </footer>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/5.11.3/main.min.js"></script>
 <script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var calendarEl = document.getElementById('calendar');
+        var calendar = new FullCalendar.Calendar(calendarEl, {
+            initialView: 'dayGridMonth',
+            events: [
+                { title: 'Flight Operations', start: '2025-02-15' },
+                { title: 'Maintenance Check', start: '2025-02-18' },
+                { title: 'Training Session', start: '2025-02-22' }
+            ]
+        });
+        calendar.render();
+    });
+
+    // Mobile menu toggle
     function toggleMenu() {
         document.getElementById('main-menu').classList.toggle('active');
-    }
-
-    const backToTopButton = document.getElementById('back-to-top');
-
-    window.onscroll = function () {
-        if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
-            backToTopButton.style.display = "block";
-        } else {
-            backToTopButton.style.display = "none";
-        }
-    };
-
-    function scrollToTop() {
-        window.scrollTo({ top: 0, behavior: 'smooth' });
     }
 </script>
 
