--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
         <p>Our department ensures the safe, efficient, and compliant operation of aircraft, focusing on training, safety, and maintenance to support mission success.</p>
     </section>
 
+    <!-- Adicionando a seção do calendário no index.html -->
+<section class="calendar-section">
+    <h2>Department Schedule</h2>
+    <div id="calendar"></div>
+</section>
+
     <section class="section" id="links">
         <h2>Documentation and Quick Access</h2>
         <ul>
