--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/5.11.3/main.min.css">
     <style>
         .section {
             background-color: #f2f2f2;
@@ -21,6 +22,18 @@
 
         .section h2 {
             color: #FFA500;
+        }
+
+        .calendar-section {
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        #calendar {
+            max-width: 100%;
+            margin: 0 auto;
         }
     </style>
 </head>
@@ -81,11 +94,10 @@
         <p>Our department ensures the safe, efficient, and compliant operation of aircraft, focusing on training, safety, and maintenance to support mission success.</p>
     </section>
 
-    <!-- Adicionando a seção do calendário no index.html -->
-<section class="calendar-section">
-    <h2>Department Schedule</h2>
-    <div id="calendar"></div>
-</section>
+    <section class="calendar-section">
+        <h2>Department Schedule</h2>
+        <div id="calendar"></div>
+    </section>
 
     <section class="section" id="links">
         <h2>Documentation and Quick Access</h2>
@@ -102,10 +114,24 @@
     <p>&copy; 2025 Operations Department - ANAVIA</p>
 </footer>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/5.11.3/main.min.js"></script>
 <script>
     function toggleMenu() {
         document.getElementById('main-menu').classList.toggle('active');
     }
+
+    document.addEventListener('DOMContentLoaded', function () {
+        var calendarEl = document.getElementById('calendar');
+        var calendar = new FullCalendar.Calendar(calendarEl, {
+            initialView: 'dayGridMonth',
+            events: [
+                { title: 'Flight Operations', start: '2025-02-15' },
+                { title: 'Maintenance Check', start: '2025-02-18' },
+                { title: 'Training Session', start: '2025-02-22' }
+            ]
+        });
+        calendar.render();
+    });
 
     const backToTopButton = document.getElementById('back-to-top');
 
