--- a/index.html
+++ b/index.html
@@ -25,16 +25,20 @@
         }
 
         .calendar-section {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             background-color: #ffffff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            max-width: 600px;
+            margin: 40px auto;
         }
 
         #calendar {
-            max-width: 100%;
-            margin: 0 auto;
+            max-width: 500px;
+            width: 100%;
         }
     </style>
 </head>
