--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Operations Department</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/6.1.4/fullcalendar.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.0/main.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -63,16 +63,60 @@
 </header>
 
 <div class="container">
-    <h2>Planeamento do Departamento</h2>
-    <div id="fullcalendar-container"></div>
-</div>
-
-<div class="container">
     <section class="section" id="info">
         <h2>What the Operations Department Does</h2>
         <p>Our department ensures the safe, efficient, and compliant operation of aircraft, focusing on training, safety, and maintenance to support mission success.</p>
     </section>
 
+    <section class="section" id="info">
+    <h2>Planeamento do Departamento</h2>
+    </section>
+    <div id="fullcalendar-container"></div>
+</div>
+
+<div style="display: flex; justify-content: center; margin-bottom: 40px;">
+    <button id="book-now" style="padding: 15px 30px; font-size: 20px; background-color: #FFA500; color: white; border: none; border-radius: 8px; cursor: pointer; display: flex; align-items: center; gap: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
+        <i class="fas fa-calendar-check" style="font-size: 24px;"></i>
+        <span>Book Now</span>
+    </button>
+</div>
+
+<div id="booking-form-container" style="display: none; padding: 30px; background-color: #ffffff; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); border-radius: 12px; box-shadow: 0px 5px 15px rgba(0,0,0,0.3); z-index: 1000; width: 600px; font-family: 'Montserrat', sans-serif;">
+    <h3 style="text-align: center; color: #FFA500; font-family: 'Montserrat', sans-serif; font-size: 24px;">Flight Booking Form</h3>
+    <form id="booking-form" style="display: flex; flex-direction: column; gap: 15px; font-size: 18px;">
+        <label for="name" style="font-weight: bold;">Name:</label>
+        <input type="text" id="name" name="name" placeholder="Enter your name" required style="padding: 12px; border: 1px solid #ccc; border-radius: 5px; font-size: 16px;">
+
+        <label for="department" style="font-weight: bold;">Department:</label>
+        <input type="text" id="department" name="department" placeholder="Enter your department" required style="padding: 12px; border: 1px solid #ccc; border-radius: 5px; font-size: 16px;">
+
+        <label for="date" style="font-weight: bold;">Preferred Date:</label>
+        <input type="date" id="date" name="date" required style="padding: 12px; border: 1px solid #ccc; border-radius: 5px; font-size: 16px;">
+
+        <label for="flight-type" style="font-weight: bold;">Type of Flight:</label>
+        <select id="flight-type" name="flight-type" required style="padding: 12px; border: 1px solid #ccc; border-radius: 5px; font-size: 16px;">
+            <option value="demo">Demo</option>
+            <option value="test">Test</option>
+            <option value="validation">Validation</option>
+        </select>
+
+        <label for="system-number" style="font-weight: bold;">System Number:</label>
+        <input type="text" id="system-number" name="system-number" placeholder="Enter system number" required style="padding: 12px; border: 1px solid #ccc; border-radius: 5px; font-size: 16px;">
+
+        <label for="system-config" style="font-weight: bold;">System Configuration:</label>
+        <input type="text" id="system-config" name="system-config" placeholder="Enter system configuration" required style="padding: 12px; border: 1px solid #ccc; border-radius: 5px; font-size: 16px;">
+
+        <label for="objectives" style="font-weight: bold;">Flight Objectives:</label>
+        <textarea id="objectives" name="objectives" rows="5" placeholder="Describe the flight objectives (e.g., duration, maneuvers, payload tests, weather limits)" required style="padding: 12px; border: 1px solid #ccc; border-radius: 5px; font-size: 16px;"></textarea>
+
+        <div style="display: flex; justify-content: space-between; margin-top: 20px;">
+            <button type="submit" style="padding: 12px 24px; background-color: #FFA500; color: white; border: none; border-radius: 5px; font-size: 16px; cursor: pointer;">Submit</button>
+            <button type="button" id="close-form" style="padding: 12px 24px; background-color: #ccc; color: black; border: none; border-radius: 5px; font-size: 16px; cursor: pointer;">Close</button>
+        </div>
+    </form>
+</div>
+
+<div class="container">
     <section class="section" id="links">
         <h2>Documentation and Quick Access</h2>
         <ul>
@@ -88,7 +132,7 @@
     <p>&copy; 2025 Operations Department - ANAVIA</p>
 </footer>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/6.1.4/fullcalendar.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.0/main.min.js"></script>
 <script src="js/scripts.js"></script>
 
 </body>
