--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
 <header>
     <img src="images/Anavia-English-Colour.jpg" alt="ANAVIA Logo" class="logo">
-    <h1>Operations Department</h1>
-    <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
+    <div style="position: absolute; left: 50%; transform: translateX(-50%);">
+        <h1>Operations Department</h1>
+    </div>
     <nav>
         <ul id="main-menu">
             <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
