--- a/safety.html
+++ b/safety.html
@@ -12,7 +12,12 @@
 
 <header>
     <img src="images/Anavia-English-Colour.jpg" alt="ANAVIA Logo" class="logo">
-    <h1>Safety</h1>
+    
+    <!-- Bloco para centralizar o título -->
+    <div style="position: absolute; left: 50%; transform: translateX(-50%);">
+        <h1>Safety</h1>
+    </div>
+
     <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
     <nav>
         <ul>
