--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </section>
 
     <section class="section" id="info">
-    <h2>Planeamento do Departamento</h2>
+    <h2>Department Agenda</h2>
     </section>
     <div id="fullcalendar-container"></div>
 </div>
