--- a/operations.html
+++ b/operations.html
@@ -68,6 +68,12 @@
     <section id="flight-manual" class="section">
         <h2>Flight Manual</h2>
         <p>This section contains the operational flight manual, including flight procedures, safety measures, and emergency protocols.</p>
+        
+        <a href="C:\OD\OneDrive - Anavia AG\Desktop\Work\Website\Operations-test\Documents\24012025_FO-MAN.001.1.0_Aircraft Flight Manual.pdf" target="_blank" class="button-link">
+            <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; margin-top: 15px;">
+                View AFM Document
+            </button>
+        </a>
     </section>
 
     <section id="system-description" class="section">
@@ -78,6 +84,12 @@
     <section id="flight-log" class="section">
         <h2>Flight Log</h2>
         <p>Access logs of completed flights, including mission data, performance, and any incidents recorded during operations.</p>
+        
+        <a href="flight_log_form.html" class="button-link">
+            <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; margin-top: 15px;">
+                Fill Flight Log
+            </button>
+        </a>
     </section>
 
     <section id="test-validations" class="section">
