--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
     </section>
 
     <section class="section" id="info">
-    <h2>Department Agenda</h2>
+        <h2>Department Agenda</h2>
+        <p>Stay updated with the latest flight schedules, training sessions, maintenance tasks, and operational activities to ensure efficient planning and execution across the department.</p>
     </section>
     <div id="fullcalendar-container"></div>
 </div>
