--- a/operations.html
+++ b/operations.html
@@ -97,15 +97,78 @@
         <p>Records of system tests, validations, and performance evaluations to ensure operational reliability.</p>
     </section>
 
-    <section id="flight-tools" class="section">
-        <h2>Flight Tools</h2>
-        <p>Tools and resources used during flight operations, including planning software, navigation aids, and communication devices.</p>
-    </section>
+<section id="flight-tools" class="section">
+    <h2>Flight Tools</h2>
+    <p>Access essential tools for flight planning and monitoring.</p>
 
-    <section id="documents" class="section">
-        <h2>Documents</h2>
-        <p>Essential operational documents, including checklists, reference materials, and regulatory compliance forms.</p>
-    </section>
+    <!-- Weather Tools -->
+    <div style="display: flex; align-items: center; margin-bottom: 20px;">
+        <h3 style="min-width: 120px; padding: 5px 10px; background-color: #f2f2f2; border-left: 5px solid #FFA500; margin-right: 20px; color: #333; font-weight: bold;">Weather</h3>
+        <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+            <a href="https://www.weatherpro.com/en/ch" target="_blank">
+                <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; margin-top: 15px;">WeatherPRO</button>
+            </a>
+            <a href="https://www.windy.com/" target="_blank">
+                <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; margin-top: 15px;">Windy</button>
+            </a>
+            <a href="https://www.spaceweatherlive.com/" target="_blank">
+                <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; margin-top: 15px;">Space Weather</button>
+            </a>
+            <a href="https://www.natural-hazards.ch/home.html?tab=actualdanger/" target="_blank">
+                <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; margin-top: 15px;">Natural Hazards</button>
+            </a>
+        </div>
+    </div>
+
+    <!-- Maps Tools -->
+    <div style="display: flex; align-items: center; margin-bottom: 20px;">
+        <h3 style="min-width: 120px; padding: 5px 10px; background-color: #f2f2f2; border-left: 5px solid #FFA500; margin-right: 20px; color: #333; font-weight: bold;">Maps</h3>
+        <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+            <a href="https://notaminfo.com/switzerlandmap" target="_blank">
+                <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; margin-top: 15px;">NOTAMinfo</button>
+            </a>
+            <a href="https://www.skybriefing.com/de/dabs" target="_blank">
+                <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; margin-top: 15px;">Skybriefing</button>
+            </a>
+        </div>
+    </div>
+
+    <!-- Flight Tools -->
+    <div style="display: flex; align-items: center; margin-bottom: 20px;">
+        <h3 style="min-width: 120px; padding: 5px 10px; background-color: #f2f2f2; border-left: 5px solid #FFA500; margin-right: 20px; color: #333; font-weight: bold;">Flight</h3>
+        <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+            <a href="https://www.flightradar24.com/" target="_blank">
+                <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; margin-top: 15px;">FlightRadar</button>
+            </a>
+            <a href="https://globe.adsbexchange.com/" target="_blank">
+                <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; margin-top: 15px;">ADSBexchange</button>
+            </a>
+            <a href="https://e6bx.com/e6b/" target="_blank">
+                <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; margin-top: 15px;">Flight Calculator</button>
+            </a>
+        </div>
+    </div>
+</section>
+
+<section id="documents" class="section">
+    <h2>Documents</h2>
+    <p>Access critical flight documentation and forms.</p>
+
+    <div style="display: flex; gap: 15px; flex-wrap: wrap; justify-content: flex-start; margin-top: 20px;">
+        <a href="path/to/briefing-folder" target="_blank">
+            <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; font-size: 16px; cursor: pointer;">Briefing</button>
+        </a>
+
+        <a href="path/to/flight-auth-folder" target="_blank">
+            <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; font-size: 16px; cursor: pointer;">Flight Auth & Fit for Flight</button>
+        </a>
+
+        <a href="path/to/flight-logs-folder" target="_blank">
+            <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; font-size: 16px; cursor: pointer;">Flight Logs</button>
+        </a>
+    </div>
+</section>
+
 </div>
 
 <button id="back-to-top" onclick="scrollToTop()">⬆️</button>
