--- a/operations.html
+++ b/operations.html
@@ -156,7 +156,7 @@
 
     <div style="display: flex; gap: 15px; flex-wrap: wrap; justify-content: flex-start; margin-top: 20px;">
         <a href="path/to/briefing-folder" target="_blank">
-            <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; font-size: 16px; cursor: pointer;">Briefing</button>
+            <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; font-size: 16px; cursor: pointer;">Briefings</button>
         </a>
 
         <a href="path/to/flight-auth-folder" target="_blank">
